projeto em andamento

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-/* Reset some default styles for better consistency */
-body, h1, h2, p, ul, li {
+*{
     margin: 0;
     padding: 0;
-  }
+}
   
   body {
     font-family: Arial, sans-serif;
@@ -12,7 +11,8 @@ body, h1, h2, p, ul, li {
   
   /* Header styles */
   header.banner {
-    background-color: #f2f2f2;
+    background-image: url(./assets/images/banner.png);
+    background-color: #332b2b;
     padding: 20px;
   }
   
