--- a/style.css
+++ b/style.css
@@ -12,12 +12,13 @@
   /* Header styles */
   header.banner {
     background-image: url(./assets/images/banner.png);
-    background-color: #332b2b;
+    background-color: rgba(19, 20, 20, 0.548);
     padding: 20px;
   }
   
   header.banner .banner-content {
     max-width: 800px;
+    height: 35rem;
     margin: 0 auto;
     text-align: center;
   }
@@ -29,13 +30,13 @@
   header.banner h1 {
     font-size: 28px;
     margin-top: 20px;
-    color: #333;
+    color: #000000;
   }
   
   header.banner p {
     font-size: 18px;
     margin-top: 10px;
-    color: #666;
+    color: #000000;
   }
   
   header.banner .botao {
@@ -119,7 +120,7 @@
   
   /* Footer styles */
   footer {
-    background-color: #f2f2f2;
+    background-color: #000000;
     padding: 20px;
     text-align: center;
   }
