--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 /* Header styles */
 header.banner {
   background-image: url(./assets/images/banner.png);
-  background-color: rgba(19, 20, 20, 0.548);
+  background-color: #000000;
   padding: 20px;
 }
 
@@ -30,13 +30,13 @@ header.banner .logo img {
 header.banner h1 {
   font-size: 28px;
   margin-top: 20px;
-  color: #000000;
+  color: #fff;
 }
 
 header.banner p {
   font-size: 18px;
   margin-top: 10px;
-  color: #000000;
+  color: #fff;
 }
 
 header.banner .botao {
@@ -52,6 +52,7 @@ header.banner .botao {
 
 /* Main section styles */
 main {
+  background-color: #333;
   padding: 20px;
 }
 
