--- a/style.css
+++ b/style.css
@@ -133,17 +133,22 @@ footer {
   text-align: center;
 }
 
-footer .dio-logo {
-  max-width: 15rem;
+footer {
+  padding: 60px 0;
+  text-align: center;
+  background-image: linear-gradient(
+    rgba(50, 168, 219, 0),
+    rgba(50, 168, 219, 0.2)
+  );
+  border-top: 1px solid #33a8db80;
 }
 
-footer p {
-  font-size: 12px;
-  margin-top: 10px;
-  color: #333;
+footer .dio-logo {
+  width: 300px;
 }
 
 footer a {
-  color: #007bff;
+  color: #33a8db;
+  font-weight: bold;
   text-decoration: none;
 }
