--- a/style.css
+++ b/style.css
@@ -1,136 +1,148 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap");
+
 * {
+  font-family: "Raleway", sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  color: #333;
-}
-
-/* Header styles */
-header.banner {
-  background-image: url(./assets/images/banner.png);
   background-color: #000000;
-  padding: 20px;
 }
 
-header.banner .banner-content {
-  max-width: 800px;
-  height: 36rem;
-  margin: 0 auto;
+h2 {
+  font-size: 2rem;
+  color: #33a8db;
+  font-weight: bold;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  margin: 24px;
+}
+
+p {
+  color: #fff;
+}
+
+section {
+  margin: 100px auto;
+}
+
+.banner {
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.6),
+      rgba(49, 168, 221, 0.2),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url(./assets/images/banner.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 600px;
+  padding-top: 60px;
+  border-bottom: 1px solid #33a8db80;
+}
+
+.banner .banner-content {
+  color: #fff;
+  width: 600px;
+  margin: auto;
   text-align: center;
 }
 
-header.banner .logo img {
-  width: 150px;
+.banner h1 {
+  font-size: 2.5rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: transparent;
+  background: -webkit-linear-gradient(#33a8db, #1472b7);
+  background-clip: text;
+  -webkit-background-clip: text;
 }
 
-header.banner h1 {
-  font-size: 28px;
-  margin-top: 20px;
-  color: #fff;
+.banner p {
+  font-size: 1.25rem;
+  margin: 16px 0 24px;
 }
 
-header.banner p {
-  font-size: 18px;
-  margin-top: 10px;
-  color: #fff;
+.banner .logo {
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 260px;
+  width: 260px;
+  margin: auto;
+  border-radius: 50%;
+  padding: 16px;
+  margin-bottom: 16px;
 }
 
-header.banner .botao {
-  padding: 10px 20px;
-  font-size: 18px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  margin-top: 20px;
-  cursor: pointer;
+.banner.logo img {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
-/* Main section styles */
-main {
-  background-color: #333;
-  padding: 20px;
+.banner .banner-content button {
+  color: #33a8dd;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 16px 32px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  background-color: transparent;
+  border-image: linear-gradient(#3ba1cd, #1572b7);
+  border-image-slice: 10;
+  border-radius: 30px;
 }
 
 #course-content {
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-#course-content h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-  color: #007bff;
+  width: 800px;
   text-align: center;
 }
 
-#course-content p {
-  font-size: 16px;
-  color: #333;
-  text-align: center;
+#course-content .modules-list {
+  margin: 24px 0;
 }
 
-.modules-list .module {
-  font-size: 16px;
-  margin-bottom: 10px;
-  background-color: #007bff;
-  color: #000000;
-  border: none;
-  border-radius: 5px;
-  text-align: center;
-}
-
-.modules-list .module span {
-  font-weight: bold;
-  color: #007bff;
-}
-
-/* Transform World section styles */
-#transform-world {
-  background-color: #007bff;
+#course-content .modules-list .module {
   color: #fff;
-  text-align: center;
-  padding: 30px;
+  width: 530px;
+  margin: 0 auto 24px;
+  border: 1px solid #33a8db;
+  background-color: #252525;
+  padding: 16px;
+  border-radius: 100px;
+  box-shadow: inset -5px 6px 8px rgba(0, 0, 0, 0.7);
+}
+
+#course-content .modules-list .module span {
+  color: #33a8db;
+}
+
+#transform-world {
+  height: 560px;
+  background-size: cover;
+  background-image: url(./assets/images/woman-code.png);
+  background-attachment: fixed;
+  border-top: 1px solid #33a8db;
+  border-bottom: 1px solid #33a8db80;
+  padding: 200px;
 }
 
 #transform-world p {
-  font-size: 24px;
-  font-weight: bold;
+  font-weight: 900;
+  font-size: 2.5rem;
+  text-transform: lowercase;
+  max-width: 250px;
+  text-shadow: 3px 2px #33a8db;
 }
 
-/* Professional Challenges section styles */
 #professional-challenges {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-#professional-challenges h2 {
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #007bff;
+  text-align: center;
+  width: 800px;
 }
 
 #professional-challenges img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 20px;
-}
-
-#professional-challenges p {
-  font-size: 16px;
-  color: #333;
-}
-
-/* Footer styles */
-footer {
-  background-color: #000000;
-  padding: 20px;
-  text-align: center;
+  margin: 32px 0;
 }
 
 footer {
